Send Message Alignment issue fixed

--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -809,7 +809,6 @@
   
   .btn {
     width: 100%;
-    max-width: 250px;
   }       
   
   .title-name {
